--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.3",
+    "@mantine/dropzone": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^1.0.4-beta.5",
     "@prisma/client": "^3.11.1",
