--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
