--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.1.3",
-    "@mantine/dropzone": "^4.1.3",
-    "@mantine/hooks": "^4.1.3",
+    "@mantine/core": "^4.1.4",
+    "@mantine/dates": "^4.1.4",
+    "@mantine/dropzone": "^4.1.4",
+    "@mantine/hooks": "^4.1.4",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^1.0.4-beta.5",
-    "@prisma/client": "^3.11.1",
+    "@prisma/client": "^3.12.0",
+    "dayjs": "^1.11.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
