--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^1.0.4-beta.5",
     "@prisma/client": "^3.12.0",
+    "@stripe/react-stripe-js": "^1.7.2",
+    "@stripe/stripe-js": "^1.29.0",
     "dayjs": "^1.11.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
@@ -24,7 +26,8 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stripe": "^8.222.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
