--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^8.222.0"
