--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "dayjs": "^1.11.1",
-    "next": "12.1.0",
+    "next": "^12.1.6",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
