--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "dayjs": "^1.11.1",
+    "micro": "^9.3.4",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "17.0.2",
