--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^3.14.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
+    "ably": "^1.2.5-beta.1",
     "dayjs": "^1.11.1",
     "micro": "^9.3.4",
     "next": "^12.1.6",
