--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@stripe/stripe-js": "^1.29.0",
     "ably": "^1.2.5-beta.1",
     "dayjs": "^1.11.1",
+    "firebase": "^9.8.4",
     "micro": "^9.3.4",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.6",
