--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
-    "prisma": "^3.14.0"
+    "postcss": "^8.4.14",
+    "postcss-preset-env": "^7.7.2",
+    "prisma": "^3.14.0",
+    "tailwindcss": "^3.1.4"
   }
 }
