--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,19 +11,24 @@
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "components/profilePage/profileInfo/ProfileInfo.tsx", "pages/api/product/upload-product.ts", "pages/api/product/user-products.js", "components/chat/ChatComponent.tsx"  ],
+    "**/*.tsx",
+    "components/profilePage/profileInfo/ProfileInfo.tsx",
+    "pages/api/product/upload-product.ts",
+    "pages/api/product/user-products.js",
+    "components/chat/ChatComponent.tsx",
+    "postcss.config.js"
+  ],
   "exclude": [
     "node_modules"
   ]
