--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^8.222.0"
