--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mantine/hooks": "^4.2.8",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^1.0.0-beta.7",
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^4.0.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "dayjs": "^1.11.1",
@@ -28,6 +28,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.3.5",
     "react-query": "^3.39.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
